[gd_scene load_steps=5 format=3 uid="uid://c5e7n3nn8kblp"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_o3mxf"]
[ext_resource type="Texture2D" uid="uid://ubfoggavtmwd" path="res://assets/x_wing_selector.png" id="2_attso"]
[ext_resource type="AudioStream" uid="uid://be234j06kgwk1" path="res://sounds/blast-x-wing.ogg" id="3_vx2ko"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4obc"]
size = Vector2(56, 36)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_o3mxf")
speed = 200
sprite_half_size = 32

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_attso")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e4obc")

[node name="SpawnUp" type="Marker2D" parent="."]
position = Vector2(13, -17)

[node name="SpawnDown" type="Marker2D" parent="."]
position = Vector2(17, 12)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vx2ko")
volume_db = -2.0

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
